force-app/main/default/objects/AVO_Student__c/AVO_Student__c.object-meta.xml
<CustomObject>
    <label>Student</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>