force-app/main/default/objects/AVO_Student__c/fields/AVO_Age__c.field-meta.xml
<CustomField>
    <fullName>AVO_Age__c</fullName>
    <label>Age</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>