force-app/main/default/objects/AVO_Student__c/fields/AVO_Country__c.field-meta.xml
<CustomField>
    <fullName>AVO_Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>