force-app/main/default/objects/AVO_Student__c/fields/AVO_First_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_First_Name__c</fullName>
    <label>First Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>