force-app/main/default/objects/AVO_Student__c/fields/AVO_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Last_Name__c</fullName>
    <label>Last Name</label>
    <type>TextArea</type>
</CustomField>