force-app/main/default/objects/AVO_Student__c/fields/AVO_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>AVO_Review_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Review Required</label>
    <type>Checkbox</type>
</CustomField>